--- a/oase/Dockerfile
+++ b/oase/Dockerfile
@@ -3,28 +3,28 @@ ARG OASE_VERSION=1.2.0
 
 FROM centos:centos7
 
-#ARG OASE_VERSION
-#ENV OASE_VERSION ${OASE_VERSION}
-#
-#RUN rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7 && \
-#    yum -y update && \
-#    rm -rf /var/cache/yum/*  && \
-#    yum clean all && \
-#    localedef -f UTF-8 -i ja_JP ja_JP.UTF-8 && \
-#    ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
-#
-#ENV LANG="ja_JP UTF-8" \
-#    LANGUAGE="ja_JP:ja" \
-#    LC_ALL="ja_JP.UTF-8" \
-#    TZ="Asia/Tokyo"
-#
-#RUN yum -y install wget && \
-#    yum -y install gcc && \
-#    rm -rf /var/cache/yum/*  && \
-#    yum clean all
-#
-#WORKDIR /home
-#
+ARG OASE_VERSION
+ENV OASE_VERSION ${OASE_VERSION}
+
+RUN rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7 && \
+   yum -y update && \
+   rm -rf /var/cache/yum/*  && \
+   yum clean all && \
+   localedef -f UTF-8 -i ja_JP ja_JP.UTF-8 && \
+   ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+
+ENV LANG="ja_JP UTF-8" \
+   LANGUAGE="ja_JP:ja" \
+   LC_ALL="ja_JP.UTF-8" \
+   TZ="Asia/Tokyo"
+
+RUN yum -y install wget && \
+   yum -y install gcc && \
+   rm -rf /var/cache/yum/*  && \
+   yum clean all
+
+WORKDIR /home
+
 #RUN wget  https://github.com/exastro-suite/oase/releases/download/v${OASE_VERSION}/exastro-oase-${OASE_VERSION}.tar.gz && \
 #    tar zxvf /home/exastro-oase-${OASE_VERSION}.tar.gz -C /home && \
 #    rm -f /home/exastro-oase-${OASE_VERSION}.tar.gz
